# Crafting-system

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  items.json  items.txt  recipes.txt
headers/: advanced_types.h  dlinked_list.h  dynamic_array.h  interface.h  item.h  load.h  mycalc.h  mystring.h  parser.h  set.h  stack.h
source/: interface.c  item.c  load.c  main.c  mycalc.c  parser.c
